--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
             <div class="blog-heading">
                 <span>My Recent Blogs</span>
-                <h3>My Blog</h3>
+                <h3>My Blogs</h3>
             </div>
              
             <div class="blog-container">
