--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,27 @@
         </header>
 
         <section id="blog">
+
+            <div class="form-area">
+                <div class="form-container">
+                    <form action="">
+                        <h2>Contact Us</h2>
+                        <div class="form-element">
+                            <label for="Name">Name </label>
+                            <input type="text" id="name" >
+                        </div>
+                        <div class="form-element">
+                            <label for="email">Email </label>
+                            <input type="text" id="email" >
+                        </div>
+                        <div class="form-element">
+                            <label for="textarea">Describe your issues</label>
+                            <textarea id="issues" placeholder="Describe your issues in details here"></textarea>
+                        </div>
+                        
+                    </form>
+                </div>
+            </div>
          
 
             <div class="blog-heading">
