--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                         <h2>Contact Us</h2>
                         <div class="form-element">
                             <label for="Name">Name </label>
-                            <input type="text" id="name" >
+                            <input type="text" id="name">
                         </div>
                         <div class="form-element">
                             <label for="email">Email </label>
@@ -58,6 +58,9 @@
                         <div class="form-element">
                             <label for="textarea">Describe your issues</label>
                             <textarea id="issues" placeholder="Describe your issues in details here"></textarea>
+                        </div>
+                        <div class="form-element">
+                            <input type="submit" value="submit" id="submit">
                         </div>
                         
                     </form>
